# midi2swstruct

./: .README.md.kate-swp  .gitignore  Cargo.toml  ID - Nyan Cat.structure  Never-Gonna-Give-You-Up-3.structure  Piano Sonata n14 op27 1mov ''Moonlight''.structure  README.md  Sonata No.14 Op 27 Moonlight Sonata.structure  Toby Fox - Fallen Down (Reprise), From UNDERTALE .structure  seductress.structure  test.structure
.github/workflows/: release.yml
bool_traits/: Cargo.toml
bool_traits/src/: lib.rs
option_array/: Cargo.toml
option_array/src/: lib.rs
sequence/: Cargo.toml
sequence/src/: lib.rs  multisequence.rs  multisequenceview.rs  sequence.rs  sequenceview.rs
src/: .main.rs.kate-swp  lib.rs  main.rs  optionarray.rs  timebytesequence.rs
src/sequence/: mod.rs  multisequence.rs  multisequenceview.rs  sequence.rs  sequenceview.rs
web/: Cargo.toml  index.html  style.css
web/src/: lib.rs
