[package]
name = "midi2swstruct"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
midly = "0.5.3"
num-traits = "0.2.19"
sw-structure-io = { git = "https://github.com/nukecat/sw-structure-io.git" }
sequence = { path = "../midi2swstruct/sequence" }

[workspace]
members = [
    "option_array",
    "bool_traits",
    "sequence"
]
