[package]
name = "midi2swstruct-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
midi2swstruct = { path = "../" }
midly = "0.5"
sw-structure-io = { git = "https://github.com/nukecat/sw-structure-io.git" }
